deploy/k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyber-databrew-frontend
  labels:
    app.kubernetes.io/name: cyber-databrew
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: cyber-databrew
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cyber-databrew
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyber-databrew
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: web
          image: us-central1-docker.pkg.dev/green-valley-442103/rick-cyber-databrew-images/cyber-databrew-frontend:dev-latest
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: cyber-databrew-frontend-nginx
