deploy/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyber-databrew-frontend
  labels:
    app.kubernetes.io/name: cyber-databrew
    app.kubernetes.io/component: frontend
spec:
  ingressClassName: gce
  rules:
    - host: cyber-databrew-dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyber-databrew-frontend
                port:
                  number: 80
